more improvements to JDBC-related logging